# permissions

./: README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
api/: models.py  permissions.py  serializers.py  urls.py
api/migrations/: 0001_initial.py  0002_auto_20200912_2102.py
permissions/: asgi.py  settings.py  urls.py  wsgi.py
